--- a/projects/ngx-shared-components/package.json
+++ b/projects/ngx-shared-components/package.json
@@ -6,6 +6,8 @@
     "@angular/core": "^14.2.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@ng-icons/core": "^22.2.0",
+    "@ng-icons/heroicons": "^22.2.0"
   }
 }
